[tool.poetry]
name = "grpc-starter"
version = "0.1.0"
description = "Grpc Starter"
authors = ["'huangkai' <h1770360848@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
grpcio = "^1.36.1"
grpcio-tools = "^1.36.1"

[tool.poetry.dev-dependencies]

[tool.black]
target-version = ['py37']
skip-string-normalization = true

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
